Scrollbar width fixed for any resolution, background image added for better visualizetion and understanding changes between divisions, necessary inputs added to newentrytitle.php, some divisions fixed for better visual

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -456,11 +456,18 @@ input.button.next {
 
 
 
-/* selen baslangic */
+/* selen baslangic 990000*/
 .container {
     width: 100%;
     height: 900px;
     background: #990000;
+    margin: auto;
+    padding: 10px;
+}
+.container2 {
+    width: 100%;
+    height: 900px;
+	background-image: url("../img/bg3.jpg");
     margin: auto;
     padding: 10px;
 }
@@ -525,7 +532,14 @@ input.button.next {
     height: 850px;
     background: #FCF1E7;
 }
-
+.main2 {
+    margin-left: 35%;
+    height: 850px;
+	width: 30%;
+}
+label{
+	color: greenyellow;
+}
 
 /* */
 header
@@ -551,7 +565,7 @@ a{
 {
 	float: left;
 	height: 800px;
-	width: 195px;
+	width: 98%;
 	background-image: url(image/grey_336x280.gif);
 	overflow-y: scroll;
 	margin-bottom: 25px;
